--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi==0.109.0
-uvicorn==0.27.1
-google-cloud-firestore==2.16.1
-firebase-admin==6.4.0
+fastapi==0.115.1
+uvicorn==0.23.2
+firebase-admin==6.7.0
+pydantic[email]==2.10.6
+google-cloud-firestore>=2.19.0
+python-dotenv==1.0.0
