--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ firebase-admin==6.7.0
 pydantic[email]==2.10.6
 google-cloud-firestore>=2.19.0
 python-dotenv==1.0.0
+python-multipart>=0.0.5
+python-dateutil>=2.8.2
